[package]
name = "helios-light-client"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
tendermint = "0.40.4"
tendermint-rpc = { version = "0.40.4", default-features = false, features = ["http-client"] }
tendermint-light-client = "0.40.4"
tendermint-light-client-detector = "0.40.4"

clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
http = "1.1.0"
reqwest = { version = "0.11.20", default-features = false, features = ["rustls-tls-native-roots"] }
